[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "priority-living-cli"
version = "3.0.0"
description = "Priority Living CLI — Sovereign AI command & control for your local machine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Priority Living Labs"}
]

[project.optional-dependencies]
ai = ["torch", "transformers", "huggingface_hub"]

[project.scripts]
pl = "priority_living.cli:main"
